<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#0099cc"
    tools:context=".MapsActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout2"
        android:background="#f7f8ff"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:scrollIndicators="right">




            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="fill_horizontal|top|left|bottom|fill_vertical|right">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/app_name"
                    android:id="@+id/textView3"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:textColor="#1e1e06" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/app_about"
                    android:id="@+id/textView4"
                    android:textColor="#1e1e06"
                    android:layout_below="@+id/textView3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/what_is_title"
                    android:id="@+id/textView5"
                    android:textColor="#1e1e06"
                    android:layout_below="@+id/textView4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/what_is"
                    android:id="@+id/textView6"
                    android:textColor="#1e1e06"
                    android:layout_below="@+id/textView5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/how_title"
                    android:id="@+id/textView7"
                    android:textColor="#1e1e06"
                    android:layout_below="@+id/textView6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/how"
                    android:textColor="#1e1e06"
                    android:id="@+id/textView8"
                    android:layout_below="@+id/textView7" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView1"

                    android:layout_below="@+id/textView8" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#1e1e06"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/share_title"
                    android:id="@+id/textView9"
                    android:layout_below="@+id/imageView1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/share"
                    android:textColor="#1e1e06"
                    android:id="@+id/textView10"
                    android:layout_below="@+id/textView9" />

            </RelativeLayout>
        </ScrollView>


    </RelativeLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back"
        android:id="@+id/button5"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>